fix response link and use url instead of domain